# wp3_calibrator

./: CMakeLists.txt  LICENSE  README.md  package.xml  visualization_config.rviz
include/wp3_calibrator/: arucoprocessor.h  classtest.h  defines.h  functions.h  imageconverter.h  sensor.h  validation.h  visualization.h
kinect_ICP1_tMat (20180903-mh)/kinect1/: results.yaml
kinect_ICP1_tMat (20180903-mh)/kinect2/: results (another copy).yaml  results (copy).yaml
kinect_ICP1_tMat (20180903-mh)/kinect3/: results.yaml
kinect_ICP1_tMat/kinect1/: results.yaml
kinect_ICP1_tMat/kinect3/: results (copy).yaml
kinect_ICP1_tMat/kinect4/: results.yaml
kinect_ICP1_tMat/kinect5/: results.yaml
kinect_ICP1_tMat/kinect6/: results.yaml
kinect_calibrations/: kinect_order_mh.txt
kinect_calibrations/kinect2/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
launch/: calibrate.launch  tf_resultC.launch
logs/: log-A.txt  log-B.txt  log-C.txt
src/: arucoprocessor.cpp  calibrate.cpp  calibrate_merge.cpp  classtest.cpp  functions.cpp  imageconverter.cpp  sensor.cpp  validation.cpp  visualization.cpp
