<?xml version="1.0"?>
<package>
  <name>wp3_calibrator</name>
  <version>0.0.0</version>
  <description>ROS package to calibrate extrinsic pose of multiple sensor nodes</description>
  

  <maintainer email="atle.aalerud@uia.no">Atle Aalerud</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
<!--  <build_depend>io</build_depend>-->
  <build_depend>image_transport</build_depend>
  <build_depend>kinect2_bridge</build_depend>
  <build_depend>cv_bridge</build_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
<!--  <build_depend>eigen</build_depend>-->
<!--  <build_depend>cmake_modules</build_depend>-->

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>pcl_ros</run_depend>  
<!--  <run_depend>io</run_depend>-->
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend><!-- Depend on cv_bridge instead of libopencv-dev to support ROS Hydro.-->
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
<!--  <run_depend>eigen</run_depend>-->
<!--  <run_depend>cmake_modules</run_depend>-->



  <export>

  </export>
</package>


